bk_ida/gccida/g2/record_constant_1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/varasm.c:3365:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/varasm.c:3389:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/varasm.c:3468:7: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v10 = lang_hooks_0.expand_constant( exp); 
      ^~~~~~~~~~~~
      lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/varasm.c:3468:35: error: called object type '<dependent type>' is not a function or function pointer
v10 = lang_hooks_0.expand_constant( exp); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/varasm.c:3669:20: error: expected expression
v34 = ( tree_node *)v33[4]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/varasm.c:3669:9: error: use of undeclared identifier 'tree_node'
v34 = ( tree_node *)v33[4]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/varasm.c:3695:20: error: expected expression
v34 = ( tree_node *)v33[4]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/varasm.c:3695:9: error: use of undeclared identifier 'tree_node'
v34 = ( tree_node *)v33[4]; 
        ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_constant_1/src/obj/varasm.o] Error 1
